; ModuleID = '/home/carl/AnghaBench/streem/src/extr_iter.c_gen_repeat.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_iter.c_gen_repeat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.repeat_data* }
%struct.repeat_data = type { i64, i32 }

@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @gen_repeat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gen_repeat(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.repeat_data*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load %struct.repeat_data*, %struct.repeat_data** %7, align 8
  store %struct.repeat_data* %8, %struct.repeat_data** %5, align 8
  %9 = load %struct.repeat_data*, %struct.repeat_data** %5, align 8
  %10 = getelementptr inbounds %struct.repeat_data, %struct.repeat_data* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %11, -1
  store i64 %12, i64* %10, align 8
  %13 = load %struct.repeat_data*, %struct.repeat_data** %5, align 8
  %14 = getelementptr inbounds %struct.repeat_data, %struct.repeat_data* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %2
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %19 = load %struct.repeat_data*, %struct.repeat_data** %5, align 8
  %20 = getelementptr inbounds %struct.repeat_data, %struct.repeat_data* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32 (%struct.TYPE_5__*, i32, ...) @strm_emit(%struct.TYPE_5__* %18, i32 %21, i8* null)
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %24 = call i32 @strm_stream_close(%struct.TYPE_5__* %23)
  br label %31

25:                                               ; preds = %2
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %27 = load %struct.repeat_data*, %struct.repeat_data** %5, align 8
  %28 = getelementptr inbounds %struct.repeat_data, %struct.repeat_data* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = call i32 (%struct.TYPE_5__*, i32, ...) @strm_emit(%struct.TYPE_5__* %26, i32 %29, i32 (%struct.TYPE_5__*, i32)* @gen_repeat)
  br label %31

31:                                               ; preds = %25, %17
  %32 = load i32, i32* @STRM_OK, align 4
  ret i32 %32
}

declare dso_local i32 @strm_emit(%struct.TYPE_5__*, i32, ...) #1

declare dso_local i32 @strm_stream_close(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
